feat: validate global excludes in api
